--- a/ass.html
+++ b/ass.html
@@ -24,33 +24,25 @@
         
         </div>
          <div class = "content" > 
-                <h3> Да, я сам рисовал логотип </h3>
+                <h3> Внемание, Аффтар жжот нипадецки, у ниво висеннее абастрение </h3>
                 <hr>
                 <p> 
-                Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст
-                    Жопа негра
+                    Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение
+                    Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение
+                    Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение
+                    Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение
+                    Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение
                 </p>
-                <p>
-                Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст
-                Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст
-                Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст
-                Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст
-                </p>
-                <h3> Шалом </h3>
+                <h3> Аффтар ИМХО ЗФБ </h3>
                 <hr>
                 <p> 
-                Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст
-                Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст
-                Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст
-                Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст
+                    Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение
+                    Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение
+                    Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение
+                    Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение
+                    Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение Весеннее обострение
                 </p>
-                <p>
-                    Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст
-                    Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст
-                    Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст
-                    Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст Тут будет текст
-                </p>
-        </div>
+         </div>
          <div class = "footer" > 1 </div>
     </div>
  </body>
